--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -30,16 +30,20 @@ RUN apt-get -y update &&						\
     apt-get clean all
 
 # hack the default shell to bash instead of dash
-RUN rm /bin/sh && ln -s bash /bin/sh && locale-gen en_US.UTF-8 && \
-    update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
+RUN rm /bin/sh && ln -s bash /bin/sh
+
+RUN locale-gen en_US.UTF-8
+
+# use Java 8 instead of default Java 11
+RUN update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
 
 ARG UID=1000
 
 # Add DAOS users
-RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home/daos daos_server && \
-   echo "daos_server:daos_server" | chpasswd && \
-   useradd --user-group --create-home --shell /bin/bash daos_agent && \
-   echo "daos_agent:daos_agent" | chpasswd
+RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home/daos daos_server
+RUN echo "daos_server:daos_server" | chpasswd
+RUN useradd --user-group --create-home --shell /bin/bash daos_agent
+RUN echo "daos_agent:daos_agent" | chpasswd
 
 # Create directory for DAOS backend storage
 RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent /home/daos/pre &&	\
@@ -50,10 +54,12 @@ RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent /home/
 # root then run a chown command which is frustrating as the copy can take a few
 # seconds.
 WORKDIR /home/daos/pre
-COPY --chown=daos_server:daos_server SConstruct .
-COPY --chown=daos_server:daos_server utils/sl utils/sl
-COPY --chown=daos_server:daos_server utils/build.config utils/
+COPY SConstruct .
+COPY utils/sl utils/sl
+COPY utils/build.config utils/
+RUN chown -R daos_server.daos_server /home/daos
 USER daos_server:daos_server
+RUN ln -s utils/sl site_scons
 
 # Control what to build.  By default Dockerfiles build everything to allow for
 # ease-of-use for users, however in CI everything is turned off and then
