--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -33,23 +33,31 @@ RUN update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/jav
 ARG UID=1000
 
 # Add DAOS users
-RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home/daos daos_server && \
-    useradd --user-group --create-home --shell /bin/bash daos_agent
+RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home/daos daos_server
 RUN echo "daos_server:daos_server" | chpasswd
+RUN useradd --user-group --create-home --shell /bin/bash daos_agent
 RUN echo "daos_agent:daos_agent" | chpasswd
 
 # Create directory for DAOS backend storage
-RUN mkdir -p /opt/daos && chown -R daos_server.daos_server /opt/daos && \
- mkdir /mnt/daos && chown daos_server.daos_server /mnt/daos && \
- mkdir /var/run/daos_server && chown daos_server.daos_server /var/run/daos_server && \
- mkdir /var/run/daos_agent && chown daos_agent.daos_agent /var/run/daos_agent
+RUN mkdir -p /opt/daos && chown -R daos_server.daos_server /opt/daos
+RUN mkdir /mnt/daos && chown daos_server.daos_server /mnt/daos
+RUN mkdir /var/run/daos_server && chown daos_server.daos_server /var/run/daos_server
+RUN mkdir /var/run/daos_agent && chown daos_agent.daos_agent /var/run/daos_agent
 
+ARG CACHEBUST=1
+RUN apt-get -y upgrade && apt-get clean all
 
 # Control what to build.  By default Dockerfiles build everything to allow for
 # ease-of-use for users, however in CI everything is turned off and then
 # selectively enabled.  Turning off any step disables all future steps.
 ARG DAOS_DEPS_BUILD=yes
-ARG DEPS_JOBS=1
+ARG DAOS_BUILD=$DAOS_DEPS_BUILD
+ARG DAOS_JAVA_BUILD=$DAOS_BUILD
+# Legacy, NOBUILD should be set to any string to disable all three.
+ARG NOBUILD=no
+
+# select compiler to use
+ARG COMPILER=gcc
 
 # The COPY command has a --chown option but it's not well supported so copy as
 # root then run a chown command which is frustrating as the copy can take a few
@@ -58,28 +66,29 @@ WORKDIR /home/daos/pre
 COPY SConstruct .
 COPY utils/sl utils/sl
 COPY utils/build.config utils/
+RUN chown -R daos_server.daos_server /home/daos
+USER daos_server:daos_server
 RUN ln -s utils/sl site_scons
 
 RUN [ "$DAOS_DEPS_BUILD" != "yes" ] || \
-    (scons --build-deps=yes --jobs $DEPS_JOBS PREFIX=/opt/daos --deps-only BUILD_TYPE=debug && \
+    (scons --build-deps=yes install PREFIX=/opt/daos --deps-only && \
     /bin/rm -rf build *.gz)
 
 COPY --chown=daos_server:daos_server utils/run_in_ga.sh utils/
 
 WORKDIR /home/daos/daos/
-COPY --chown=daos_server:daos_server VERSION LICENSE ftest.sh SConstruct ./
-COPY --chown=daos_server:daos_server utils utils
-COPY --chown=daos_server:daos_server src src
+COPY VERSION LICENSE ftest.sh SConstruct ./
+COPY utils utils
+COPY src src
+USER root:root
+RUN chown -R daos_server.daos_server /home/daos
+USER daos_server:daos_server
 RUN ln -s utils/sl site_scons
-
-ARG DAOS_BUILD=$DAOS_DEPS_BUILD
-ARG JOBS=$DEPS_JOBS
-ARG COMPILER=gcc
 
 # Build DAOS
 # BUILD_TYPE=debug does not work.
 RUN [ "$DAOS_BUILD" != "yes" ] || \
-    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=dev && \
+    (scons -j 4 install PREFIX=/opt/daos COMPILER=$COMPILER && \
     /bin/rm -rf build && \
     cp -r utils/config/examples /opt/daos)
 
@@ -88,5 +97,28 @@ RUN [ "$DAOS_BUILD" != "yes" ] || \
 ENV LD_LIBRARY_PATH=/opt/daos/lib:/opt/daos/lib64:/opt/daos/bin/../lib64/daos_srv/../../prereq/debug/spdk/lib/:$LD_LIBRARY_PATH
 ENV PATH=/opt/daos/bin:$PATH
 ENV FI_SOCKETS_MAX_CONN_RETRY=1
+
+# Build java and hadoop bindings
+WORKDIR /home/daos/daos/src/client/java
+# Set maven repo mirror
+RUN mkdir -p /home/daos/.m2
+RUN echo -e "<settings>\n\
+        <mirrors>\n\
+                <mirror>\n\
+                        <id>google-maven-central</id>\n\
+                        <name>GCS Maven Central mirror</name>\n\
+                        <url>https://maven-central.storage-download.googleapis.com/maven2/</url>\n\
+                        <mirrorOf>central</mirrorOf>\n\
+                </mirror>\n\
+        </mirrors>\n\
+</settings>" > /home/daos/.m2/settings.xml
+
+RUN [ "$DAOS_JAVA_BUILD" != "yes" ] || \
+    mvn clean install -T 1C -DskipITs -Dgpg.skip -Ddaos.install.path=/opt/daos
+WORKDIR /home/daos
+
+# Remove local copy
+#RUN rm -rf /home/daos/*
+USER root:root
 
 USER root:root
