--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -109,6 +109,9 @@ RUN [ "$DAOS_BUILD" != "yes" ] || \
     /bin/rm -rf build && \
     cp -r utils/config/examples /opt/daos; }
 
+#USER root:root
+#RUN [ "$DAOS_BUILD" != "yes" ] || { . utils/sl/setup_local.sh && ./utils/setup_daos_admin.sh; }
+#USER daos_server:daos_server
 
 # Set environment variables
 ENV LD_LIBRARY_PATH=/opt/daos/lib:/opt/daos/lib64:/opt/daos/bin/../lib64/daos_srv/../../prereq/debug/spdk/lib/:$LD_LIBRARY_PATH
@@ -135,6 +138,8 @@ ARG DAOS_JAVA_BUILD=$DAOS_BUILD
 RUN [ "$DAOS_JAVA_BUILD" != "yes" ] || \
     mvn clean install -T 1C -DskipITs -Dgpg.skip -Ddaos.install.path=/opt/daos
 WORKDIR /home/daos
+
+USER root:root
 
 # Remove local copy
 #RUN rm -rf /home/daos/*
