Change depeds to needs.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -39,7 +39,7 @@ jobs:
 
   Build:
     name: Run DAOS tests
-    depends: Prepare
+    needs: Prepare
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
