--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -35,7 +35,7 @@ jobs:
                           --build-arg UID
                           --build-arg DEPS_JOB=10
     - name: Prune images not required for build.
-      run: docker images -a --filter label=DAOS=true --quiet | xargs docker rmi --no-prune
+      run: docker images -a --filter label=DAOS=stage1 --quiet | xargs docker rmi --no-prune
 
   Build:
     name: Run DAOS tests
@@ -65,5 +65,7 @@ jobs:
                           --build-arg DAOS_BUILD=no
                           --build-arg DEPS_JOB=10
                           --build-arg UID -t build-image
+    - name: Select image
+      run: docker images -a --filter label=DAOS=true --quiet | tail -n 1
     - name: Run inside
       run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./daos/utils/run_in_ga.sh
