--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -26,8 +26,7 @@ RUN apt-get -y update &&						\
 	liblz4-dev libibverbs-dev librdmacm-dev libaio-dev yasm		\
 	python3-dev golang-go git libyaml-dev python3-tabulate		\
 	python3-pyxattr openjdk-8-jdk maven libipmctl-dev pciutils kmod	\
-	libcunit1-dev libopenmpi-dev numactl doxygen libunwind-dev	\
-	syslog-ng &&							\
+	libcunit1-dev libopenmpi-dev numactl doxygen libunwind-dev &&	\
     apt-get clean all
 
 # hack the default shell to bash instead of dash
@@ -88,7 +87,7 @@ USER daos_server:daos_server
 
 # Set a label.  This is useful for searching for DAOS images, but is also used
 # in github-actions to prune elements of the dockerfile below this point.
-LABEL DAOS=true
+LABEL DAOS=stage1
 
 WORKDIR /home/daos/daos/
 COPY VERSION LICENSE ftest.sh SConstruct ./
@@ -105,20 +104,19 @@ ARG JOBS=$DEPS_JOBS
 ARG DAOS_BUILD=$DAOS_DEPS_BUILD
 
 # Build DAOS
-# BUILD_TYPE=debug does not work.
 RUN [ "$DAOS_BUILD" != "yes" ] || \
     { scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER && \
     /bin/rm -rf build && \
     cp -r utils/config/examples /opt/daos; }
 
-#USER root:root
-#RUN [ "$DAOS_BUILD" != "yes" ] || { . utils/sl/setup_local.sh && ./utils/setup_daos_admin.sh; }
-#USER daos_server:daos_server
-
 # Set environment variables
-ENV LD_LIBRARY_PATH=/opt/daos/lib:/opt/daos/lib64:/opt/daos/bin/../lib64/daos_srv/../../prereq/release/spdk/lib/:$LD_LIBRARY_PATH
 ENV PATH=/opt/daos/bin:$PATH
 ENV FI_SOCKETS_MAX_CONN_RETRY=1
+
+USER root:root
+RUN [ "$DAOS_BUILD" != "yes" ] || { . utils/sl/setup_local.sh && ./utils/setup_daos_admin.sh; }
+LABEL DAOS=true
+USER daos_server:daos_server
 
 # Build java and hadoop bindings
 WORKDIR /home/daos/daos/src/client/java
@@ -144,4 +142,4 @@ WORKDIR /home/daos
 USER root:root
 
 # Remove local copy
-#RUN rm -rf /home/daos/*
+# RUN rm -rf /home/daos/*
