Improve image prune.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -35,6 +35,8 @@ jobs:
                           --build-arg UID
                           --build-arg DEPS_JOB=10
     - name: Prune images not required for build.
+      run: docker images -a --filter label=DAOS=true --quiet | xargs docker rmi --no-prune
+    - name: Prune images not required for build.
       run: docker images -a --filter label=DAOS=stage1 --quiet | xargs docker rmi --no-prune
 
   Build:
