--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        distro: [ubuntu.20.04]
+        distro: [ubuntu.20.04, centos.8]
         compiler: [clang, gcc]
     steps:
     - name: Checkout code
