--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -51,7 +51,7 @@ jobs:
         # Only run on Ubuntu for now, centos 8 just isn't very stable.
         distro: [ubuntu.20.04]
         # ubuntu/gcc is broken right now DAOS-7601
-        compiler: [clang, gcc]
+        compiler: [clang]
     env:
       COMPILER: ${{ matrix.compiler }}
     steps:
